--- a/public/styles.css
+++ b/public/styles.css
@@ -5,3 +5,14 @@
 #reviews {
   margin-bottom: 50px;
 }
+
+#navbar {
+  position: sticky;
+  top: 0;
+  z-index: 50;
+  max-height: 120px;
+}
+
+body {
+  margin: 0px;
+}
